--- a/textimager-uima-talismane/pom.xml
+++ b/textimager-uima-talismane/pom.xml
@@ -47,4 +47,28 @@
     	<version>1.8.0</version>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.6</version>        
+            <executions>
+                <execution>
+            <phase>package</phase>
+            <goals>  
+                        <goal>single</goal>
+                    </goals>
+            </execution>
+            </executions>
+            <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
+
 </project>
