--- a/textimager-uima-OpenerProject/pom.xml
+++ b/textimager-uima-OpenerProject/pom.xml
@@ -38,6 +38,21 @@
 		<version>1.8.0</version>
 	</dependency>
 	<dependency>
+    	<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    	<artifactId>de.tudarmstadt.ukp.dkpro.core.api.ner-asl</artifactId>
+    	<version>1.8.0</version>
+	</dependency>
+	<dependency>
+    	<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    	<artifactId>de.tudarmstadt.ukp.dkpro.core.api.syntax-asl</artifactId>
+    	<version>1.8.0</version>
+	</dependency>
+	<dependency>
+    	<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    	<artifactId>de.tudarmstadt.ukp.dkpro.core.api.coref-asl</artifactId>
+    	<version>1.8.0</version>
+	</dependency>
+	<dependency>
 		<groupId>com.github.ixa-ehu</groupId>
 		<artifactId>kaflib</artifactId>
 		<version>1.0.5</version>
