--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,7 @@
 	</dependencies>
 	<modules>
 		<module>textimager-uima-marmot</module>
+		<module>textimager-uima-wiki</module>
+		<module>textimager-uima-types</module>
 	</modules>
 </project>
