Mediawiki io initial add

--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,6 @@
         <module>textimager-uima-talismane</module>
         <module>textimager-uima-IXA</module>
         <module>textimager-uima-uaic</module>
+        <module>textimager-uima-io-mediawiki</module>
     </modules>
 </project>
