uaic removed from build due to error

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <module>textimager-uima-OpenerProject</module>
         <module>textimager-uima-talismane</module>
         <module>textimager-uima-IXA</module>
-        <module>textimager-uima-uaic</module>
+<!--         <module>textimager-uima-uaic</module> -->
         <module>textimager-uima-io-mediawiki</module>
     </modules>
 </project>
