Migrated NeuralnetworkNER to TTL Base Annotators

--- a/textimager-uima-NeuralnetworkNER/pom.xml
+++ b/textimager-uima-NeuralnetworkNER/pom.xml
@@ -30,6 +30,11 @@
 			<version>1.9.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-base-annotators</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20180130</version>
