--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         </dependency>
     </dependencies>
     <modules>
+        <module>textimager-uima-base-annotators</module>
         <module>textimager-uima-marmot</module>
         <module>textimager-uima-wiki</module>
         <module>textimager-uima-types</module>
