--- a/textimager-uima-NeuralnetworkNER/pom.xml
+++ b/textimager-uima-NeuralnetworkNER/pom.xml
@@ -31,6 +31,11 @@
 			<version>1.9.0</version>
 		</dependency>
 		<dependency>
+			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+			<artifactId>de.tudarmstadt.ukp.dkpro.core.api.io-asl</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20180130</version>
