--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
 <!--         <module>textimager-uima-talismane</module> -->
 <!--         <module>textimager-uima-IXA</module> -->
 <!--         <module>textimager-uima-uaic</module> -->
-<!--         <module>textimager-uima-io-mediawiki</module> -->
+        <module>textimager-uima-io-mediawiki</module>
 <!--         <module>textimager-uima-spacy</module> -->
 <!--         <module>textimager-uima-NeuralnetworkNER</module> -->
 <!--         <module>textimager-uima-cltk</module> -->
-        <!--<module>textimager-uima-io</module>-->
+        <module>textimager-uima-io</module>
         <!--<module>textimager-uima-fasttext</module>-->
     </modules>
 </project>
