--- a/textimager-uima-io-mediawiki/pom.xml
+++ b/textimager-uima-io-mediawiki/pom.xml
@@ -8,6 +8,16 @@
   <artifactId>textimager-uima-io-mediawiki</artifactId>
   <dependencies>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20170516</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.10.3</version>
+		</dependency>
+		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.core.api.segmentation-asl</artifactId>
 			<version>1.8.0</version>
