--- a/textimager-uima-io-mediawiki/pom.xml
+++ b/textimager-uima-io-mediawiki/pom.xml
@@ -19,12 +19,17 @@
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+			<artifactId>de.tudarmstadt.ukp.dkpro.core.api.ner-asl</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.core.api.segmentation-asl</artifactId>
 			<version>1.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-			<artifactId>de.tudarmstadt.ukp.dkpro.core.api.ner-asl</artifactId>
+			<artifactId>de.tudarmstadt.ukp.dkpro.core.io.jwpl-asl</artifactId>
 			<version>1.8.0</version>
 		</dependency>
 		<dependency>
