--- a/textimager-uima-fasttext/pom.xml
+++ b/textimager-uima-fasttext/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>textimager-uima-fasttext</artifactId>
-<!--	<build>
+	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -27,12 +27,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>-->
+	</build>
 	<dependencies>
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    <version>2.11.2</version>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.vinhkhuc</groupId>
@@ -56,13 +56,13 @@
 			<version>1.8.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.hucompute.services</groupId>
-			<artifactId>services-types</artifactId>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-types</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.hucompute.textimager.uima</groupId>
-			<artifactId>textimager-uima-types</artifactId>
+			<groupId>org.hucompute.services</groupId>
+			<artifactId>services-types</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
