--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,6 @@
         <!--<module>textimager-uima-fasttext</module>-->
         <module>textimager-uima-tagme</module>
         <module>textimager-uima-HUComputeNER</module>
-<!--         <module>textimager-uima-disambiguation</module> -->
+        <module>textimager-uima-disambiguation</module>
     </modules>
 </project>
