--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <modules>
 <!--         <module>textimager-uima-base-annotators</module> -->
 <!--         <module>textimager-uima-marmot</module> -->
-        <module>textimager-uima-wiki</module>
+<!--        <module>textimager-uima-wiki</module>-->
         <module>textimager-uima-types</module>
 <!--         <module>textimager-uima-OpenerProject</module> -->
 <!--         <module>textimager-uima-talismane</module> -->
@@ -48,8 +48,9 @@
 <!--         <module>textimager-uima-cltk</module> -->
         <module>textimager-uima-io</module>
 <!--         <module>textimager-uima-fasttext</module> -->
-        <module>textimager-uima-tagme</module>
-        <module>textimager-uima-HUComputeNER</module>
-        <module>textimager-uima-disambiguation</module>
+<!--        <module>textimager-uima-tagme</module>-->
+<!--        <module>textimager-uima-HUComputeNER</module>-->
+<!--        <module>textimager-uima-disambiguation</module>-->
+        <module>textimager-uima-io-abbyy</module>
     </modules>
 </project>
