--- a/textimager-uima-io-abbyy/pom.xml
+++ b/textimager-uima-io-abbyy/pom.xml
@@ -80,6 +80,12 @@
             <version>1.10.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
