MarMot and Heideltime updated.

--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,10 @@
 
 	<modules>
 		<!-- <module>textimager-uima-base-annotators</module> -->
-		<!-- <module>textimager-uima-marmot</module> -->
-		<module>textimager-uima-wiki</module>
 		<module>textimager-uima-types</module>
+		<module>textimager-uima-io</module>
+		<module>textimager-uima-marmot</module>
+		<module>textimager-uima-wiki</module>
 		<!-- <module>textimager-uima-OpenerProject</module> -->
 		<!-- <module>textimager-uima-talismane</module> -->
 		<!-- <module>textimager-uima-IXA</module> -->
@@ -82,7 +83,6 @@
 		<!-- <module>textimager-uima-spacy</module> -->
 		<!-- <module>textimager-uima-NeuralnetworkNER</module> -->
 		<!-- <module>textimager-uima-cltk</module> -->
-		<module>textimager-uima-io</module>
 		<module>textimager-uima-fasttext</module>
 		<module>textimager-uima-tagme</module>
 		<!-- <module>textimager-uima-HUComputeNER</module> -->
