--- a/textimager-uima-heideltime/pom.xml
+++ b/textimager-uima-heideltime/pom.xml
@@ -10,6 +10,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-types</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.heideltime</groupId>
 			<artifactId>heideltime</artifactId>
 			<version>2.2.1</version>
