SpaCy updated to use JEP library

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 
 
 	<modules>
-		<!-- <module>textimager-uima-base-annotators</module> -->
+		<module>textimager-uima-base-annotators</module>
 		<module>textimager-uima-types</module>
 		<module>textimager-uima-io</module>
 		<module>textimager-uima-marmot</module>
@@ -80,7 +80,7 @@
 		<!-- <module>textimager-uima-IXA</module> -->
 		<!-- <module>textimager-uima-uaic</module> -->
 		<!-- <module>textimager-uima-io-mediawiki</module> -->
-		<!-- <module>textimager-uima-spacy</module> -->
+		<module>textimager-uima-spacy</module>
 		<!-- <module>textimager-uima-NeuralnetworkNER</module> -->
 		<!-- <module>textimager-uima-cltk</module> -->
 		<module>textimager-uima-fasttext</module>
