--- a/textimager-uima-spacy/pom.xml
+++ b/textimager-uima-spacy/pom.xml
@@ -10,13 +10,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
-			<artifactId>textimager-uima-types</artifactId>
+			<artifactId>textimager-uima-base-annotators</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>black.ninia</groupId>
-			<artifactId>jep</artifactId>
-			<version>3.9.0</version>
 		</dependency>
 	</dependencies>
 </project>
