--- a/textimager-uima-types/pom.xml
+++ b/textimager-uima-types/pom.xml
@@ -37,5 +37,9 @@
 			<groupId>org.dkpro.core</groupId>
 			<artifactId>dkpro-core-api-resources-asl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-api-anomaly-asl</artifactId>
+		</dependency>
 	</dependencies>
 </project>
