--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -97,9 +97,14 @@
 					<artifactId>textimager-uima-spacy</artifactId>
 					<version>${project.version}</version>
 				</dependency>
+<!-- 				<dependency> -->
+<!-- 					<groupId>org.hucompute.textimager.uima</groupId> -->
+<!-- 					<artifactId>textimager-uima-biofid-gazetteer</artifactId> -->
+<!-- 					<version>${project.version}</version> -->
+<!-- 				</dependency> -->
 				<dependency>
 					<groupId>org.hucompute.textimager.uima</groupId>
-					<artifactId>textimager-uima-biofid-gazetteer</artifactId>
+					<artifactId>textimager-uima-similarity</artifactId>
 					<version>${project.version}</version>
 				</dependency>
 				<dependency>
