--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
 		<!-- <module>textimager-uima-deploy</module> -->
 		<module>textimager-uima-heideltime</module>
 <!-- 		<module>textimager-uima-agreement</module> -->
-		<module>textimager-uima-biofid-gazetteer</module>
+<!-- 		<module>textimager-uima-biofid-gazetteer</module> -->
+		<module>textimager-uima-similarity</module>
 	</modules>
 </project>
