--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "deep-eos-uima"]
 	path = deep-eos-uima
 	url = https://github.com/m-stoeckel/deep-eos-uima
+[submodule "textimager-uima-biofid-gazetteer"]
+	path = textimager-uima-biofid-gazetteer
+	url = https://github.com/m-stoeckel/biofid-gazetteer.git
+[submodule "textimager-uima-agreement"]
+	path = textimager-uima-agreement
+	url = https://github.com/m-stoeckel/UIMA-Agreement.git
