--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <module>textimager-uima-tagme</module>
         <module>textimager-uima-HUComputeNER</module>
         <module>textimager-uima-disambiguation</module>
-        <module>textimager-uima-io-abbyy</module>
-        <module>deep-eos-uima</module>
+<!--         <module>textimager-uima-io-abbyy</module> -->
+<!--         <module>deep-eos-uima</module> -->
     </modules>
 </project>
