--- a/textimager-uima-deep-eos/pom.xml
+++ b/textimager-uima-deep-eos/pom.xml
@@ -232,19 +232,14 @@
 		<repository>
 			<id>central</id>
 			<name>Maven Plugin Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>
-		<repository>
-			<id>hu-central</id>
-			<name>alba-releases</name>
-			<url>http://service.hucompute.org/artifactory/libs-snapshot-local</url>
+			<url>https://repo1.maven.org/maven2</url>
 		</repository>
 		<repository>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 			<id>ukp-oss-model-releases</id>
-			<url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>
+			<url>https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>
 		</repository>
 		<repository>
 			<id>jitpack.io</id>
