--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hucompute.textimager.uima</groupId>
 	<artifactId>textimager-uima</artifactId>
-	<version>0.2.1</version>
+	<version>0.2.4</version>
 	<name>TextImager UIMA</name>
 	<build>
 		<plugins>
@@ -104,5 +104,6 @@
 		<module>textimager-uima-similarity</module>
 		
 		<module>textimager-uima-database</module>
+		<module>textimager-uima-io-mediawiki</module>
 	</modules>
 </project>
