--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.hucompute.textimager.uima</groupId>
 		<artifactId>textimager-uima</artifactId>
-		<version>0.2.1</version>
+		<version>0.2.4</version>
 	</parent>
 	<artifactId>textimager-uima-deploy</artifactId>
 
@@ -57,6 +57,11 @@
 				<finalName>${project.artifactId}-${project.version}-source</finalName>
 			</build>
 			<dependencies>
+				<dependency>
+					<groupId>org.hucompute.textimager.uima</groupId>
+					<artifactId>textimager-uima-util</artifactId>
+					<version>${project.version}</version>
+				</dependency>
 				<dependency>
 					<groupId>org.hucompute.textimager.uima</groupId>
 					<artifactId>textimager-uima-types</artifactId>
