--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.hucompute.textimager.uima</groupId>
 		<artifactId>textimager-uima</artifactId>
-		<version>0.2.5</version>
+		<version>0.2.6</version>
 	</parent>
 	<artifactId>textimager-uima-deploy</artifactId>
 
@@ -188,6 +188,56 @@
 					<version>${dkpro.core.version}</version>
 				</dependency>
 
+			</dependencies>
+		</profile>
+		<profile>
+			<id>mini-deploy</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<finalName>${project.artifactId}-${project.version}-mini-deploy</finalName>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.dkpro.core</groupId>
+					<artifactId>dkpro-core-corenlp-gpl</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.dkpro.core</groupId>
+					<artifactId>dkpro-core-io-text-asl</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.dkpro.core</groupId>
+					<artifactId>dkpro-core-io-xmi-asl</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.hucompute.textimager.uima</groupId>
+					<artifactId>textimager-uima-database</artifactId>
+					<version>${project.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.neo4j</groupId>
+							<artifactId>neo4j</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>com.datastax.cassandra</groupId>
+							<artifactId>cassandra-driver-core</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>com.datastax.cassandra</groupId>
+							<artifactId>cassandra-driver-mapping</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>com.datastax.cassandra</groupId>
+							<artifactId>cassandra-driver-extras</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>mysql</groupId>
+							<artifactId>mysql-connector-java</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
 			</dependencies>
 		</profile>
 
