--- a/textimager-uima-stanza/pom.xml
+++ b/textimager-uima-stanza/pom.xml
@@ -4,13 +4,18 @@
 	<parent>
 		<groupId>org.hucompute.textimager.uima</groupId>
 		<artifactId>textimager-uima</artifactId>
-		<version>0.2.5</version>
+		<version>0.2.6</version>
 	</parent>
 	<artifactId>textimager-uima-stanza</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-base-annotators</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-util</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
